--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -19,6 +19,13 @@ mat-toolbar{
 .tic-tac-color-green{
   background-image: linear-gradient(90deg, rgba(0,36,1,1) 19%, rgba(22,121,9,0.9850315126050421) 76%, rgba(123,255,0,0.9037990196078431) 95%);
 }
+.icon-list{
+  position: relative;
+  top:5px;
+  margin:0;
+  padding:0;
+  border:0;
+}
 
 @media(max-width: 959px){
   mat-toolbar{
