--- a/src/app/component/sidenav-list/sidenav-list.component.html
+++ b/src/app/component/sidenav-list/sidenav-list.component.html
@@ -2,18 +2,18 @@
   <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
     <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
   </a>
-  <a mat-list-item routerLink="/owner" (click)="onSidenavClose()">
-    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Owner Actions</span>
-  </a>
-  <a mat-list-item routerLink="#" (click)="onSidenavClose()">
-    <mat-icon>account_balance</mat-icon><span class="nav-caption">Account Actions</span>
-  </a>
   <mat-list-item [matMenuTriggerFor]="menu">
     <mat-icon>unfold_more</mat-icon>
-    <a matline>Example</a>
+    <a matline>Danh mục</a>
   </mat-list-item>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="onSidenavClose()">View profile</button>
-    <button mat-menu-item (click)="onSidenavClose()">Add contact</button>
+    <button mat-menu-item (click)="onSidenavClose()" *ngFor="let name of menuList">{{name}}</button>
   </mat-menu>
+  <a mat-list-item routerLink="/posts" (click)="onSidenavClose()">
+    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Bài viết</span>
+  </a>
+  <a mat-list-item routerLink="/contact" (click)="onSidenavClose()">
+    <mat-icon>account_balance</mat-icon><span class="nav-caption">Liên hệ</span>
+  </a>
+
 </mat-nav-list>
