--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -1,6 +1,11 @@
 .form-login{
-  position: absolute;
   margin: 0;
+  position: absolute;
+  background-color: #ffffff;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  box-shadow: 2px 2px ghostwhite ;
+  padding:10px;
   width: 35%;
   height: 80%;
   top: 50%;
