--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,10 @@ html, body {
   height: 100%;
 }
 
+.select-global{
+  margin: 0 auto;
+  border: 1px solid beige;
+  padding:10px
 
+}
 @import '~bootstrap/scss/bootstrap';
