--- a/src/app/component/admin/admin.component.scss
+++ b/src/app/component/admin/admin.component.scss
@@ -1,23 +1,23 @@
 .left-layout{
-  height: 100vh;
-  margin:0;
-  padding: 0;
-  border: 0;
-  border-radius: 0%;
+  min-height: 100vh;
+  background-color: #FFFFFF;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  padding: 10px;
+
 }
 .right-layout{
-  height: 95vh;
-  width: auto;
-  margin:0 10px 0 0;
-  padding: 0;
-  border: 0;
-  border-radius: 1%;
-  top:50%;
-  left:50%;
-  transform: translate(-50%, -50%);
-
+  height:100%;
+  min-width: 100%;
+  background-color: #FFFFFF;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  padding: 10px;
 }
 .image-responsive{
   width: 100%;
   height: auto;
+}
+.layout-admin{
+  height: 100%;
 }
