--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -39,17 +39,52 @@ ngb-carousel .wrapper>img {
 }
 
 
-.content-example-card{
-  margin-left: 10px;
+
+.carousel-one{
+  background-color: #FFFFFF;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  padding: 10px;
 }
-mat-card-header{
-  margin-left: 0px;
-  padding: 0px;
-  border: 0px;
+
+.carousel-two{
+  background-color: #FFFFFF;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  padding: 10px;
 }
-.example-header-image {
+.videos-layout{
+  background-color: #FFFFFF;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  padding: 10px;
+}
+.accordion-layout{
+  background-color: #FFFFFF;
+  border: 1px solid gainsboro;
+  border-radius: 2px;
+  width: 100%;
+  height: 100%;
+  margin : 0px;
+  padding: 0px!important;
 
 }
-.content-post{
-  height: 100vh;
+
+::ng-deep .card {
+  max-width: 100rem;
+}
+video{
+  max-width: 100%;
+  height: auto;
+}
+.translate-video{
+  position: absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+
+}
+
+.video-wrap {
+
 }
