--- a/src/app/component/topic/topic.component.scss
+++ b/src/app/component/topic/topic.component.scss
@@ -1,4 +1,4 @@
-.card-topic{
+.form-topic{
   width:100%
 }
 .button-topic{
@@ -6,5 +6,6 @@
 }
 mat-form-field{
   margin-left: 20px;
+  width: auto;
 
 }
