--- a/src/app/component/media/media.component.html
+++ b/src/app/component/media/media.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<!-- <mat-toolbar>
   <h4>Media File </h4>
 </mat-toolbar>
 
@@ -101,9 +101,9 @@
   </div>
 </div>
 
-<br><br>
+<br><br> -->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">Response</div>
@@ -112,13 +112,23 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <div fxLayout="row wrap" fxLayoutGap="15px" fxLayoutAlign="flex-start">
-  <div *ngFor="let video of videos_tranforms" fxFlex="0 1 calc(25%-15px)" fxFlex.lt-sm="0 1 calc(50%-15px)" >
+  <!-- <div fxFlex="0 1 calc(100%-15px)">
+    <app-table-custom [configure]="settingTable()" ></app-table-custom>
+  </div> -->
+  <div fxFlex="0 1 calc(100%-15px)">
+    <app-pdf-viewer-customer
+    [sourcePdf]="sourceOfPDF"
+    (onReadComplete)=whenReadComple($event)
+    (onLoadPdfError)="whenLoadError($event)">
+  </app-pdf-viewer-customer>
+  </div>
+  <!-- <div *ngFor="let video of videos_tranforms" fxFlex="0 1 calc(25%-15px)" fxFlex.lt-sm="0 1 calc(50%-15px)" >
     <mat-card style="margin-bottom: 10px;">
       <mat-card-content>
         <iframe  [src]="video.link" fxFlexFill></iframe>
       </mat-card-content>
     </mat-card>
-  </div>
+  </div> -->
 </div>
