--- a/src/app/component/customer/pdf-viewer-customer/pdf-viewer-customer.component.scss
+++ b/src/app/component/customer/pdf-viewer-customer/pdf-viewer-customer.component.scss
@@ -35,7 +35,19 @@
   right: 45px;
   padding:20px;
   z-index: 1;
-
+  button{
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    display:block;
+    margin-bottom: 10px;
+    background: #999;
+    border-radius: 50%;
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
+  }
   mat-icon{
     font-size: 30px;
     width: 30px;
@@ -43,6 +55,11 @@
     line-height: 30px;
     display:block;
     margin-bottom: 10px;
+    background: #999;
+    border-radius: 50%;
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
     &:hover {
         opacity: 0.5;
     }
@@ -67,6 +84,13 @@
   .event-bottom-right{
     right: 15px;
     padding:10px;
+    button{
+      font-size: 20px;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      margin-bottom: 10px;
+    }
     mat-icon{
       font-size: 20px;
       width: 20px;
@@ -80,4 +104,9 @@
       }
     }
   }
+}
+.my-icon{
+  margin: 0 8px;
+  padding-right:20px;
+  cursor: pointer;
 }
