--- a/src/app/component/media/media.component.html
+++ b/src/app/component/media/media.component.html
@@ -125,11 +125,11 @@
       (onLoadPdfError)="whenLoadError($event)">
     </app-pdf-viewer-customer>
   </div>
-  <!-- <div *ngFor="let video of videos_tranforms" fxFlex="0 1 calc(25%-15px)" fxFlex.lt-sm="0 1 calc(50%-15px)" >
+  <div *ngFor="let video of videos_tranforms" fxFlex="0 1 calc(25%-15px)" fxFlex.lt-sm="0 1 calc(50%-15px)" >
     <mat-card style="margin-bottom: 10px;">
       <mat-card-content>
         <iframe  [src]="video.link" fxFlexFill></iframe>
       </mat-card-content>
     </mat-card>
-  </div> -->
+  </div>
 </div>
