--- a/src/app/component/media/media.component.html
+++ b/src/app/component/media/media.component.html
@@ -32,11 +32,11 @@
         <table class="table">
           <thead>
             <tr>
-              <th width="50%" scope="col">Name</th>
-              <th scope="col">Size</th>
-              <th scope="col">Progress</th>
-              <th scope="col">Status</th>
-              <th scope="col">Actions</th>
+              <th width="50%" scope="col">NAM</th>
+              <th scope="col">SIZE</th>
+              <th scope="col">PROGRESS</th>
+              <th scope="col">STATUS</th>
+              <th scope="col">ACTIONS</th>
             </tr>
           </thead>
           <tbody>
