--- a/src/app/component/media/media.component.html
+++ b/src/app/component/media/media.component.html
@@ -32,7 +32,7 @@
         <table class="table">
           <thead>
             <tr>
-              <th width="50%" scope="col">Name</th>
+              <th width="50%" scope="col">NAME</th>
               <th scope="col">Size</th>
               <th scope="col">Progress</th>
               <th scope="col">Status</th>
