--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,5 @@ html, body {
 
 }
 @import '~bootstrap/scss/bootstrap';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
