--- a/src/app/component/customer/card-customer/card-customer.component.scss
+++ b/src/app/component/customer/card-customer/card-customer.component.scss
@@ -4,6 +4,16 @@
 }
 mat-card {
   border: 1px solid palegoldenrod;
+  padding: 0px;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+mat-card-header{
+  padding: 10px;
+}
+mat-card-content{
+  padding: 10px
 }
 .rotateimg180 {
   -webkit-transform: rotate(180deg);
@@ -12,3 +22,35 @@ mat-card {
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
+.lesson-name{
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #066f6f1c;
+  flex: auto;
+  justify-content: flex-end;
+  font-weight: 750;
+  box-shadow: 1px 1px 1px 1px grey;
+}
+.container-search{
+  padding:10px;
+}
+
+.fix {
+  overflow: hidden;
+  position: fixed; // overflow will be work;
+  height: 100%;
+}
+
+// html {
+//   overflow: hidden;
+//   height: 100%;
+//   position: fixed;
+// }
+
+// body {
+//   overflow: auto;
+//   height: 100%;
+//   position: relative;
+// }
