--- a/src/app/component/customer/menu-list-item/menu-list-item.component.html
+++ b/src/app/component/customer/menu-list-item/menu-list-item.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row wrap" fxLayout.lt-md="row" fxLayoutGap="10px" fxLayoutAlign="flex-start">
-  <div fxFlex="calc(18%-10px)" fxFlex.lt-md="calc(20%-10px)" fxHide.lt-sm class="left-layout">
+<div fxLayout="row wrap" fxLayout.lt-md="row" fxLayout.xs="column" fxLayoutGap="10px" fxLayoutAlign="flex-start">
+  <div fxFlex="calc(15%-10px)" fxFlex.lt-md="calc(10%-10px)" fxHide.xs class="left-layout">
     <div gdAreas="logo logo|content content" gdRow="auto auto">
       <div gdArea="logo">
         <img [src]="logoIcon" class="image-responsive">
@@ -14,7 +14,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div fxFlex="calc(82%-10px)" fxFlex.lt-md="calc(20%-10px)" fxFlex.lt-sm="100%" class="right-layout">
+  <div fxFlex="calc(85%-10px)" fxFlex.lt-md="calc(90%-10px)" fxFlex.xs="100%" class="right-layout">
     <router-outlet></router-outlet>
   </div>
 </div>
