Update check value

--- a/src/app/component/customer/card-customer/card-customer.component.html
+++ b/src/app/component/customer/card-customer/card-customer.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="videos_tranforms.length !== 0" #bodyEl>
+<div *ngIf="videos_tranforms.length !== 0" #bodyEl  id="cardView">
   <div fxLayout="row wrap">
     <div fxFlex="1 1 100%" class="container-search">
       <input type="search" #inputSearch  id="inputSearch" focusDirective/>
