--- a/src/app/component/customer/card-customer/card-customer.component.scss
+++ b/src/app/component/customer/card-customer/card-customer.component.scss
@@ -38,6 +38,7 @@ mat-card-content{
 }
 
 .fix {
+  background-color: red!important ;
   overflow: hidden;
   position: fixed; // overflow will be work;
   height: 100%;
